# cnki-mcp

./: .gitignore  README.md  cnki-search-api.py  cnki_mcp_server.py  pyproject.toml  requirements.txt  test_cnki.py  test_cnki_mcp.py
